NMS-4535 - big refactor to make Event be JAXB marshalled, and contain an InetAddress